[package]
name = "use_drop_zone_read_buffer"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5.7", features = ["nightly", "csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
leptos-use = { version = "0.9.0", features = ["docs"]}
web-sys = {version = "0.3",  features = ["Blob", "File", "FileReaderSync", "HtmlInputElement", "FileList", "FileReader", "Event"] }
wasm-bindgen-file-reader = "1.0.0"
hex = "0.4.3"
sha2 = "0.10.8"
wasm-bindgen = "0.2"
gloo-net = { version = "0.5.0", features = ["io-util", "futures-io"] }
leptos_router = { version = "0.5.7", features = ["csr", "nightly"] }
async-std = { version = "1.10.0", features = ["futures-core", "tokio1"] }
wasm-bindgen-futures = "0.4.40"
indicatif = "0.17.7"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
